--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6256,12 +6256,16 @@ label,
   font-weight: 300;
 }
 .footer {
+  position: absolute;
   bottom: 0;
   width: 100%;
-  height: 60px;
+  /* Set the fixed height of the footer here */
+  height: 50px;
+  background-color: #f4d7e5;
 }
 body {
   padding-top: 5px;
+  margin-bottom: 60px;
 }
 .starter-template {
   padding: 40px 15px;
@@ -6288,6 +6292,10 @@ body {
 .map-canvas {
   width: 500px;
   height: 400px;
+}
+html {
+  position: relative;
+  min-height: 100%;
 }
 
 /*# sourceMappingURL=app.css.map */
