--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -27,16 +27,21 @@ h3 {
 body, label, .checkbox label {
 	font-weight: 300;
 }
-.footer{
 
 
-  bottom:0;
+.footer {
+  position: absolute;
+  bottom: 0;
   width: 100%;
-  height: 60px;
-
+  /* Set the fixed height of the footer here */
+  height: 50px;
+  background-color: #f4d7e5;
 }
+
+
 body {
   padding-top: 5px;
+  margin-bottom:60px;
 }
 .starter-template {
   padding: 40px 15px;
@@ -69,4 +74,8 @@ body {
 
   width: 500px;
   height: 400px;
+}
+html {
+  position: relative;
+  min-height: 100%;
 }
